hw6_lab10/tests/errors/sem_val_reassign_typed.kt
// EXPECT: semantic error — reassigning typed val
fun main() {
    val name: String = "alice"
    name = "bob"
}
